add jumbotron to heading and initial info to readme

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
-  <title></title>
+  <title>Language Selector</title>
 </head>
 <body>
   <div class="container">
-    
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container-fluid">
+        <h1 class="display-4">Programming language selector</h1>
+        <p class="lead">Find out once and for all which language you should choose!</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
