add h2 and css styling to jumbo/body/h2

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <p class="lead">Find out once and for all which language you should choose!</p>
       </div>
     </div>
+    <h2>Choosing a programming language can be a daunting prospect for anyone. Remove to fear of regret and self-doubt with our new patented language selector quiz!</h2>
   </div>
 </body>
 </html>
