--- a/index.html
+++ b/index.html
@@ -16,6 +16,48 @@
       </div>
     </div>
     <h2>Choosing a programming language can be a daunting prospect for anyone. Remove to fear of regret and self-doubt with our new patented language selector quiz!</h2>
+    <form id="quiz">
+      <div class="form-group">
+        <label for="question1"></label>
+        <select class="form-control" id="question1">
+          <option value="1"></option>
+          <option value="2"></option>
+          <option value="3"></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question2"></label>
+        <select class="form-control" id="question2">
+          <option value="1"></option>
+          <option value="2"></option>
+          <option value="3"></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question3"></label>
+        <select class="form-control" id="question3">
+          <option value="1"></option>
+          <option value="2"></option>
+          <option value="3"></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question4"></label>
+        <select class="form-control" id="question4">
+          <option value="1"></option>
+          <option value="2"></option>
+          <option value="3"></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question5"></label>
+        <select class="form-control" id="question5">
+          <option value="1"></option>
+          <option value="2"></option>
+          <option value="3"></option>
+        </select>
+      </div>
+    </form>
   </div>
 </body>
 </html>
