--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
     <h2>Choosing a programming language can be a daunting prospect for anyone. Remove to fear of regret and self-doubt with our new patented language selector quiz!</h2>
     <form id="quiz">
       <div class="form-group">
-        <label for="question1"></label>
+        <label for="question1">How "high-level" do you like your programming languages to be?</label>
         <select class="form-control" id="question1">
-          <option value="1"></option>
-          <option value="2"></option>
-          <option value="3"></option>
+          <option value="1">I want to feel like I'm practically writing English</option>
+          <option value="2">I enjoy feeling somewhat like I'm speaking "computer", but not all the way there</option>
+          <option value="3">Bring on the "beep boop", I wanna be R2D2!</option>
         </select>
       </div>
       <div class="form-group">
-        <label for="question2"></label>
+        <label for="question2">What type of programming would you like to work on?</label>
         <select class="form-control" id="question2">
-          <option value="1"></option>
-          <option value="2"></option>
-          <option value="3"></option>
+          <option value="1">Buildling web applications</option>
+          <option value="2">Making web pages interactive</option>
+          <option value="3">Creating desktop applications</option>
         </select>
       </div>
       <div class="form-group">
-        <label for="question3"></label>
+        <label for="question3">What is your favorite morning activity?</label>
         <select class="form-control" id="question3">
-          <option value="1"></option>
-          <option value="2"></option>
-          <option value="3"></option>
+          <option value="1">Staring at beautiful gems</option>
+          <option value="2">Drinking lots of coffee</option>
+          <option value="3">Looking wistfully out of windows</option>
         </select>
       </div>
       <div class="form-group">
-        <label for="question4"></label>
+        <label for="question4">If you had to choose, which of the following movie genres would you pick?</label>
         <select class="form-control" id="question4">
-          <option value="1"></option>
-          <option value="2"></option>
-          <option value="3"></option>
+          <option value="1">Romantic comedy</option>
+          <option value="2">Action</option>
+          <option value="3">Science Fiction</option>
         </select>
       </div>
       <div class="form-group">
-        <label for="question5"></label>
+        <label for="question5">Which is your favorite part of the day?</label>
         <select class="form-control" id="question5">
-          <option value="1"></option>
-          <option value="2"></option>
-          <option value="3"></option>
+          <option value="1">Morning</option>
+          <option value="2">Midday</option>
+          <option value="3">Evening</option>
         </select>
       </div>
     </form>
