--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
           <option value="3">Evening</option>
         </select>
       </div>
+      <button type="submit" class="btn">Compute!</button>
     </form>
+    <div id="output">
+      <h2>Thank you for taking our flawless language selector quiz! We have calculated your results and the programming language best suited for you is:</h2>
+      <div id="language-result">
+        
+      </div>
+    </div>
   </div>
 </body>
 </html>
