--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       </div>
       <button type="submit" class="btn">Compute!</button>
     </form>
-    <div id="output">
+    <div id="output" class="hider">
       <h2>Thank you for taking our flawless language selector quiz! We have calculated your results and the programming language best suited for you is:</h2>
       <div id="language-result">
-        
+
       </div>
     </div>
   </div>
