add corresponding image to the answer output

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <select class="form-control" id="question3">
           <option value="1">Staring at beautiful gems</option>
           <option value="2">Drinking lots of coffee</option>
-          <option value="3">Looking wistfully out of windows</option>
+          <option value="3">Playing the piano</option>
         </select>
       </div>
       <div class="form-group">
@@ -61,9 +61,9 @@
     </form>
     <div id="output" class="hider">
       <h2>Thank you for taking our flawless language selector quiz! We have calculated your results and the programming language best suited for you is:</h2>
-      <div id="language-result">
+      <p id="language-result">
 
-      </div>
+      </p>
     </div>
   </div>
 </body>
