add a clear button to return to original state, some css tweaks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="lead">Find out once and for all which language you should choose!</p>
       </div>
     </div>
-    <h2>Choosing a programming language can be a daunting prospect for anyone. Remove to fear of regret and self-doubt with our new patented language selector quiz!</h2>
+    <h2 id="intro">Choosing a programming language can be a daunting prospect for anyone. Remove the fear of regret and self-doubt with our new patented language selector quiz!</h2>
     <form id="quiz">
       <div class="form-group">
         <label for="question1">How "high-level" do you like your programming languages to be?</label>
@@ -58,6 +58,7 @@
         </select>
       </div>
       <button type="submit" class="btn">Compute!</button>
+      <button id="resetter" type="reset" class="btn">Clear</button>
     </form>
     <div id="output" class="hider">
       <h2>Thank you for taking our flawless language selector quiz! We have calculated your results and the programming language best suited for you is:</h2>
