update the readme, change some question content, tweak some css styling

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="question3">What is your favorite morning activity?</label>
+        <label for="question3">What would you rather do on a Saturday morning?</label>
         <select class="form-control" id="question3">
-          <option value="1">Staring at beautiful gems</option>
-          <option value="2">Drinking lots of coffee</option>
-          <option value="3">Playing the piano</option>
+          <option value="1">Stare at beautiful gems</option>
+          <option value="2">Drink lots of coffee</option>
+          <option value="3">Play the piano</option>
         </select>
       </div>
       <div class="form-group">
@@ -50,22 +50,23 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="question5">Which is your favorite part of the day?</label>
+        <label for="question5">If you had to send an important message, which would be the best method?</label>
         <select class="form-control" id="question5">
-          <option value="1">Morning</option>
-          <option value="2">Midday</option>
-          <option value="3">Evening</option>
+          <option value="1">Deliver it personally by train</option>
+          <option value="2">Write a letter</option>
+          <option value="3">Yell it out the window</option>
         </select>
       </div>
       <button type="submit" class="btn">Compute!</button>
-      <button id="resetter" type="reset" class="btn">Clear</button>
+      <button id="resetter" type="reset" class="btn">Reset</button>
     </form>
     <div id="output" class="hider">
-      <h2>Thank you for taking our flawless language selector quiz! We have calculated your results and the programming language best suited for you is:</h2>
+      <h2>Thank you for taking our perfectly accurate language selector quiz! We have calculated your results and the programming language best suited for you is:</h2>
       <p id="language-result">
 
       </p>
     </div>
   </div>
+  <div class="pg-btm"
 </body>
 </html>
