--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Programming Language Selector</title>
+  <title>Programming Language Suggester</title>
 </head>
 <body>
   <div class="container">
@@ -29,7 +29,7 @@
       <div class="form-group">
         <label for="question2">What type of programming would you like to work on?</label>
         <select class="form-control" id="question2">
-          <option value="1">Buildling web applications</option>
+          <option value="1">Building web applications</option>
           <option value="2">Making web pages interactive</option>
           <option value="3">Creating desktop applications</option>
         </select>
